package tech.dolch.plantarch

data class Actor(val name: String)